force-app/main/default/objects/Program_Assignment__c/Program_Assignment__c.object-meta.xml
<CustomObject>
    <description>Relationship between programs and employees that they are being assigned.</description>
    <label>Program Assignment</label>
    <nameField>
        <displayFormat>PAS-{0000}</displayFormat>
        <label>Program Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>