force-app/main/default/objects/Program_Assignment__c/fields/Ahead_Behind__c.field-meta.xml
<CustomField>
    <fullName>Ahead_Behind__c</fullName>
    <description>hh:mm format for the number of minutes the employee is ahead/behind on training tasks associated with this program.</description>
    <formula>&quot;(&quot;&amp;
TEXT(FLOOR(ABS(Ahead_Behind_Mins__c )/ 60))
&amp;&apos;hr &apos;&amp; 
TEXT(MOD(ABS(Ahead_Behind_Mins__c ),60))
&amp;&apos;min&apos;&amp;
&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahead/Behind</label>
    <type>Text</type>
</CustomField>