force-app/main/default/objects/Program_Assignment__c/fields/Ahead_Behind_Mins__c.field-meta.xml
<CustomField>
    <fullName>Ahead_Behind_Mins__c</fullName>
    <formula>Completed_Mins__c - Expected_Mins_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahead/Behind Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>