force-app/main/default/objects/Program_Assignment__c/fields/Completed_Mins__c.field-meta.xml
<CustomField>
    <fullName>Completed_Mins__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of minutes earned for completing a training task. When a training task is marked complete, that object&apos;s &apos;Duration Mins.&apos; field will be added to this field.</description>
    <inlineHelpText>Total number of minutes earned from completing training tasks associated with this program.</inlineHelpText>
    <label>Completed Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>