force-app/main/default/objects/Program_Assignment__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>The date that this program was marked complete.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>