force-app/main/default/objects/Program_Assignment__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <formula>Program__r.Duration_Mins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>