force-app/main/default/objects/Program_Assignment__c/fields/Expected_Mins_Due__c.field-meta.xml
<CustomField>
    <fullName>Expected_Mins_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the number of minutes an employee is expected to have so far. This number increases by the training task&apos;s &apos;duration mins.&apos; field when a training task is past due date. Used to calculate if an employee is ahead or behind schedule.</description>
    <inlineHelpText>The number of minutes an employee is expected to have at this time. This number is calculated/increases based on the training tasks&apos; due date.</inlineHelpText>
    <label>Expected Mins. Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>