force-app/main/default/objects/Program_Assignment__c/fields/Number_of_Assigned_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assigned_Tasks__c</fullName>
    <formula>Program__r.Number_of_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Assigned Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>