force-app/main/default/objects/Program_Assignment__c/fields/Number_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Completed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>