force-app/main/default/objects/Program_Assignment__c/fields/Number_of_Working_Days_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Working_Days_Required__c</fullName>
    <formula>Program__r.Number_of_Working_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Working Days Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>