force-app/main/default/objects/Program_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Ratio between minutes earned vs. total minutes determining how far ahead or behind a user is within their assigned program. Calculated by Completed Minutes / Total Minutes by a +-25% criteria</description>
    <formula>IF(AND(Duration_Mins__c != 0, Completed_Mins__c = Duration_Mins__c), &apos;Complete&apos;,
IF(OR(Expected_Mins_Due__c = 0,AND(Expected_Mins_Due__c = 0, Completed_Mins__c = Expected_Mins_Due__c)), &apos;On Track&apos;,
IF(Completed_Mins__c / Expected_Mins_Due__c &lt;= 0.75, &apos;Far Behind&apos;,
IF(Completed_Mins__c / Expected_Mins_Due__c &lt; 1, &apos;Behind&apos;,
IF(Completed_Mins__c / Expected_Mins_Due__c &gt; 1.25, &apos;Far Ahead&apos;,
IF(Completed_Mins__c / Expected_Mins_Due__c &gt; 1, &apos;Far Ahead&apos;, &apos;N/A&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by Completed Mins. / Expected Mins. by a +-25% criteria (if Expected Mins. != 0)</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>