force-app/main/default/objects/Program_Assignment__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>IF(Start_Date__c &gt; TODAY(), 0,
IF(End_Date__c &gt; TODAY(),(TODAY() -  Start_Date__c )/7,(End_Date__c  - Start_Date__c )/7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>