force-app/main/default/objects/Program_Assignment__c/validationRules/Invalid_Completed_Minutes_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Completed_Minutes_Input</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL( Completed_Mins__c ), Completed_Mins__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Completed_Mins__c</errorDisplayField>
    <errorMessage>Completed Mins has to be greater than or equal to zero</errorMessage>
</ValidationRule>