force-app/main/default/objects/Program_Assignment__c/validationRules/Invalid_Expected_Mins_Due_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Expected_Mins_Due_Input</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(  Expected_Mins_Due__c  ),  Expected_Mins_Due__c  &lt; 0)</errorConditionFormula>
    <errorDisplayField>Expected_Mins_Due__c</errorDisplayField>
    <errorMessage>Expected Mins Due has to be greater than or equal to zero</errorMessage>
</ValidationRule>